<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>com.github.bekk</groupId>
    <artifactId>db-scheduler-ui-parent</artifactId>
    <version>main-SNAPSHOT</version>
    <packaging>pom</packaging>
    <name>db-scheduler-ui: Parent</name>
    <description>Provides a UI for db-scheduler</description>

    <properties>
        <maven.compiler.source>11</maven.compiler.source>
        <maven.compiler.target>11</maven.compiler.target>
        <spring-boot.version>2.7.15</spring-boot.version>
        <db-scheduler.version>12.5.0</db-scheduler.version>
    </properties>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>com.github.kagkarlsson</groupId>
                <artifactId>db-scheduler</artifactId>
                <version>${db-scheduler.version}</version>
            </dependency>
            <dependency>
                <!-- Import dependency management from Spring Boot -->
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-dependencies</artifactId>
                <version>${spring-boot.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
            <dependency>
                <groupId>org.junit</groupId>
                <artifactId>junit-bom</artifactId>
                <version>5.9.0</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <build>
        <pluginManagement>
            <plugins>
                <plugin>
                    <artifactId>maven-surefire-plugin</artifactId>
                    <version>3.0.0</version>
                </plugin>
            </plugins>
        </pluginManagement>
        <plugins>
            <plugin>
                <artifactId>maven-surefire-plugin</artifactId>
            </plugin>
            <plugin>
                <groupId>com.diffplug.spotless</groupId>
                <artifactId>spotless-maven-plugin</artifactId>
                <version>2.39.0</version>
                <configuration>
                    <java>
                        <includes>
                            <include>src/main/java/**/*.java</include> <!-- Check application code -->
                            <include>src/test/java/**/*.java</include> <!-- Check application tests code -->
                        </includes>
                        <googleJavaFormat>
                            <version>1.16.0</version>
                            <style>GOOGLE</style>
                        </googleJavaFormat>
                        <importOrder />
                        <removeUnusedImports />
                        <toggleOffOn/>
                        <trimTrailingWhitespace/>
                        <endWithNewline/>
                    </java>
                </configuration>
            </plugin>
        </plugins>
    </build>

    <modules>
        <module>db-scheduler-ui</module>
        <module>db-scheduler-ui-starter</module>
        <module>example-app</module>
    </modules>

    <distributionManagement>
        <repository>
            <id>github</id>
            <name>GitHub Packages</name>
            <url>https://maven.pkg.github.com/bekk/db-scheduler-ui</url>
        </repository>
    </distributionManagement>
</project>
